アイコンを作成しました

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 <header></header>
 <div class="top-wrapper">
     <div class="container">
-        <h1>Hello World!</h1>
-        <h1>Hello Everyone!</h1>
-        <p>私はフロントエンドエンジニアを目指しています</p>
+
+        <p>フロントエンドエンジニアを目指しています</p>
         <p>WEBサイトを作ってみました。よろしくお願いします。</p>
-        <div class="btn-wrapper">
+        <div class="btn-wrapper">       <!--作成したサイト一覧-->
             <h1>作成したサイト一覧</h1>
             
             <a class="btn CodeT" 
