CodeTemplaterのURLに正しく飛ぶよう変更

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>作成したサイト一覧</h1>
             
             <a class="btn CodeT" 
-            href= "file:///C:/Users/ayumu/Desktop/frontendHTMLCSS/Codetemplater/index.html">CodeTemplater</a>
+            href= "https://ayumu1220.github.io/">CodeTemplater</a>
             
             <a class="btn 2" href= "#">未定</a>
             <a class="btn 3" href= "#">未定</a>
